<resources>
    <string name="app_name">RecogNotes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="recognotes">RecogNotes</string>
    <string name="recognotes_main_instruction">Press to Start Recording</string>
    <string name="recognotes_bpm_placeholder">Enter Recording BPM</string>
    <string name="metronome">Metronome</string>
    <string name="start_record_btn_text">Start Record</string>
    <string name="stop_record_btn_text">Stop Record</string>

    <string name="submit_audio">Submit Audio</string>
    <string name="current_props">Current Properties:</string>
    <string name="submit_bpm_placeholder">recordings BPM here</string>
    <string name="submit_samplerate_placeholder">recordings sample rate here</string>
    <string name="current_sheetsname">Current Sheets Name:</string>
    <string name="submit_sheetsname_placeholder">Enter Sheets File Name</string>

    <string name="welcome_recognotes_title">Welcome to RecogNotes!</string>
    <string name="welcome_second_text">RecogNotes app will provide you mobility and efficiency when it comes to audio</string>

    <string name="firebase_web_client_id">835229068656-ntii819tlhi6mhdm33m9rq4fsvneo5qc.apps.googleusercontent.com</string>

    <string name="signup_info">Signup to RecogNotes</string>
    <string name="signup_full_name">Full Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_register_button">Register</string>
    <string name="signup_login_here">Already Registered ? Login Here</string>
    <string name="login_button">Login</string>
    <string name="login_signup_here">New Here ? Create Account</string>
    <string name="welcome_register">Register</string>
    <string name="welcome_signin">Sign in</string>
    <string name="welcome_guest">Continue as guest</string>
</resources>