<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recognotes_background_image"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_marginBottom="650dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Switch
            android:id="@+id/music_switch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:checked="true"
            android:text="Music"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/welcome_recognotes_title"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"/>

        <TextView
            android:id="@+id/welcome_second_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/welcome_second_text"
            android:textSize="30sp" />

    <Button
        android:id="@+id/user_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@xml/rounded_corners_opacity"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/welcome_register" />

    <Button
        android:id="@+id/user_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"
        android:background="@xml/rounded_corners_opacity"
        android:text="@string/welcome_signin" />

    <Button
        android:id="@+id/guset_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"
        android:background="@xml/rounded_corners_opacity"
        android:text="@string/welcome_guest" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>